changes to the budget.css file to fix alignment of creat btn and the header

--- a/MoneyMagnet/Admin Dashboard/Admincss/budget.css
+++ b/MoneyMagnet/Admin Dashboard/Admincss/budget.css
@@ -217,6 +217,13 @@ textarea {
   margin: auto;
   padding: 30px;
 }
+
+.card-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
+}
 /* Improved table styles */
 
 .table {
